force-app/main/default/objects/TaxCommodities__c/TaxCommodities__c.object-meta.xml
<CustomObject>
    <label>Commodities do Imposto</label>
    <nameField>
        <displayFormat>CI-{0000}</displayFormat>
        <label>Commodities do Imposto Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commodities dos Impostos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>