force-app/main/default/objects/TaxCommodities__c/fields/Commodity__c.field-meta.xml
<CustomField>
    <fullName>Commodity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commodity</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Commodities dos Impostos</relationshipLabel>
    <relationshipName>Commodities_dos_Impostos</relationshipName>
    <type>Lookup</type>
</CustomField>