force-app/main/default/objects/TaxCommodities__c/fields/Impostos_Barter__c.field-meta.xml
<CustomField>
    <fullName>Impostos_Barter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Impostos Barter</label>
    <referenceTo>BarterTaxes__c</referenceTo>
    <relationshipLabel>Commodities dos Impostos</relationshipLabel>
    <relationshipName>Commodities_dos_Impostos</relationshipName>
    <type>Lookup</type>
</CustomField>