force-app/main/default/objects/TaxCommodities__c/fields/TaxPercentage__c.field-meta.xml
<CustomField>
    <fullName>TaxPercentage__c</fullName>
    <label>Porcentagem do Imposto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>